force-app/main/default/objects/INST_Sales_Entitlement__c/INST_Sales_Entitlement__c.object-meta.xml
<CustomObject>
    <description>This object is used by Informatica to dump the INST Sales Entitlement Data</description>
    <label>INST Sales Entitlement</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>INST Sales Entitlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>INST Sales Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>