force-app/main/default/objects/INST_Sales_Entitlement__c/fields/Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Key__c</fullName>
    <externalId>true</externalId>
    <label>Account Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>