force-app/main/default/objects/INST_Sales_Entitlement__c/fields/Account_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Salesforce_Id__c</fullName>
    <label>Account Salesforce Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>INST Sales Entitlements</relationshipLabel>
    <relationshipName>INST_Sales_Entitlements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>