force-app/main/default/objects/INST_Sales_Entitlement__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INDIRECT-CORE</fullName>
            </value>
            <value>
                <fullName>HYBRID-DIRECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>