force-app/main/default/objects/INST_Sales_Entitlement__c/fields/Product_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Salesforce_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Salesforce Id</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>INST Sales Entitlements</relationshipLabel>
    <relationshipName>INST_Sales_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>