force-app/main/default/objects/INST_Sales_Entitlement__c/fields/Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy__c</fullName>
    <label>Taxonomy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chemical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>