force-app/main/default/objects/INST_Sales_Entitlement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Taxonomy__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Account_Salesforce_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>